--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "client:load": "cd ./client/load && pm2 start ./ecosystem.config.js",
     "client:production": "cd ./client/production && pm2 start ./ecosystem.config.js",
-    "server": "cd server && pm2 start ./ecosystem.config.js",
+    "server": "npx tsc && cd server && pm2 start ./ecosystem.config.js",
     "test": "jest"
   },
   "keywords": [
