--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -56,7 +56,7 @@
       "error",
       { "allowSeparatedGroups": true, "ignoreCase": true }
     ],
-    "sort-keys": ["allow", "asc", { "allowLineSeparatedGroups": true }],
+    "sort-keys": ["off", "asc", { "allowLineSeparatedGroups": true }],
     "@typescript-eslint/return-await": "off",
     "@typescript-eslint/no-confusing-void-expression": "off",
     "@typescript-eslint/consistent-type-definitions": "off"
