--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "The cost of not knowing MongoDB",
   "main": "./server/index.ts",
   "scripts": {
-    "load": "cd ./client/load && pm2 start ./ecosystem.config.js",
+    "base": "pm2 start src/base/ecosystem.config.js",
+    "load": "pm2 start src/load/ecosystem.config.js",
     "production": "cd ./client/production && pm2 start ./ecosystem.config.js",
     "server": "npx tsc && cd server && pm2 start ./ecosystem.config.js",
-    "test": "jest"
+    "test": "jest --detectOpenHandles"
   },
   "keywords": [
     "mongodb",
@@ -19,18 +20,12 @@
   "author": "ArturGC",
   "license": "MIT",
   "dependencies": {
-    "express": "4.18.2",
-    "express-async-errors": "3.1.1",
-    "mongodb": "6.3.0",
-    "zod": "3.22.4"
+    "mongodb": "6.5.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "8.4.1",
-    "@tsconfig/node18": "18.2.2",
-    "@types/express": "4.17.21",
+    "@tsconfig/node18": "18.2.4",
     "@types/jest": "29.5.12",
-    "@types/node": "20.11.17",
-    "@types/supertest": "6.0.2",
+    "@types/node": "20.12.5",
     "@typescript-eslint/eslint-plugin": "6.19.0",
     "@typescript-eslint/parser": "6.19.0",
     "eslint": "8.56.0",
@@ -43,11 +38,10 @@
     "eslint-plugin-promise": "6.1.1",
     "jest": "29.7.0",
     "prettier": "3.2.5",
-    "supertest": "6.3.4",
     "ts-jest": "29.1.2",
     "ts-node": "10.9.2",
     "ts-node-dev": "2.0.0",
-    "typescript": "5.3.3"
+    "typescript": "5.4.4"
   },
   "jest": {
     "collectCoverageFrom": [
