--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "target": "es2016" /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */,
     "module": "Node16" /* Specify what module code is generated. */,
-    "rootDir": "./server" /* Specify the root folder within your source files. */,
-    "outDir": "./server/build" /* Specify an output folder for all emitted files. */,
+    "rootDir": "src" /* Specify the root folder within your source files. */,
+    "outDir": "src/build" /* Specify an output folder for all emitted files. */,
     "esModuleInterop": true /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */,
     "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
     "strict": true /* Enable all strict type-checking options. */,
@@ -11,5 +11,5 @@
     "allowJs": true
   },
   "extends": "@tsconfig/node18/tsconfig.json",
-  "include": ["server/**/*"]
+  "include": ["src/**/*"]
 }
